--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "license": "MIT",
     "dependencies": {
         "dotenv": "^16.0.3",
-        "express": "^4.21.2"
+        "express": "^4.21.2",
+        "winston": "^3.17.0",
+        "winston-cloudwatch": "^6.3.0"
     },
     "devDependencies": {
         "pm2": "^5.1.2"
